--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,7 +29,7 @@ dist.jar=${dist.dir}/Livraria.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.postgresql-42.2.2.jar=C:\\Users\\Ariel\\Downloads\\postgresql-42.2.2.jar
+file.reference.postgresql-42.2.2.jar=lib/postgresql-42.2.2.jar
 includes=**
 jar.compress=false
 javac.classpath=\
